# unthinkable-RAG

./: .gitignore  README.md  frontend.py  pyproject.toml  requirements.txt
notebook/: document.ipynb  pdf_loader.ipynb
src/: api.py  data_loader.py  embedding.py  search.py  vectorstore.py
